# datalog-interpreter

./: .gitignore  CHECKIN.md  Cargo.toml  IDEAS.md  PROPOSAL.md  README.md  bril_opt.json  datalog_wasm.js  datalog_wasm_bg.wasm  out.txt  package-lock.json  package.json  report.tex  sample_out.txt
.github/: deploy.yml
.github/workflows/: deploy.yml
samples/: sample.dl  sample.in  simple_graph.dl  simple_graph_5.in  simple_graph_6.in  simple_graph_9.in
samples/dataflow/liveness/: ackerman.bril  factorial.bril  factorial.json  fibonacci.bril  fibonacci.json  liveness.dl  multi_func.bril  multi_func.json  nested_loops.bril  nested_loops.json  small.bril  small.json  variable_reuse.bril  variable_reuse.json
samples/graph/: simple_graph.dl  simple_graph_2.in  simple_graph_3.in  simple_graph_4.in  simple_graph_7.in  simple_graph_8.in
src/: bril_rs.rs  bril_rs_personal.rs  implem.rs  lib.rs  main.rs  optimize_bril.rs  parse.rs  parse_bril.rs
test/: test_parse.rs
tests/: test_parse.rs
web-demo/: Cargo.toml  build.sh  dev.sh  index.html  package-lock.json  vite.config.ts
web-demo-backup/src/: lib.rs
web-demo-svelte-backup/web-demo/: package.json  rust-toolchain.toml
web-demo-svelte-backup/web-demo/datalog_wasm/src/: lib.rs
web-demo-svelte-backup/web-demo/src/: App.svelte
web-demo-svelte-backup/web-demo/src/lib/: CodeEditor.svelte
web-demo/datalog_wasm/: Cargo.toml
web-demo/datalog_wasm/src/: lib.rs
web-demo/src/: App.svelte  lib.rs
