[package]
name = "datalogint"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "web-demo/datalog_wasm"
]

[features]
default = ["std", "position"]
position = []
std = []

[dependencies]
logos = "0.13.0"
either = "1.9.0"
serde_json = { version = "1.0"  }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
